examples/test/testpolicy11239.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11239
  namespace: namespace474
spec:
  podSelector:
    matchLabels:
      key13: value44
      key40: value12
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value26
          key26: value49
      podSelector:
        matchLabels:
          key30: value39
          key43: value36
